unit, feature tests and swagger annotations for GET getProjectTask endpoint
